<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Remote Control</string>
    <string name="btn_find">Find Device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Remote Bluetooth</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select a device to connect</string>
    <string name="connect">Connect a device</string>
    <string name="title_connected_to">Connected: </string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>
    <string name="key_esc">ESC</string>
    <string name="key_up">Up</string>
    <string name="key_left">Left</string>
    <string name="key_right">Right</string>
    <string name="key_down">Down</string>
    <string name="key_enter">Enter</string>
    <string name="key_f11">F11</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="timerMenu">Timer</string>
</resources>
